# Linux-System

./: README.md
ALSA/: .gitignore  CMakeLists.txt  README.md  main.cpp  testcapture.cpp  testplayback.cpp
ALSA/audio/: raw.pcm
ALSA/inc/: alsa_capture.hpp  alsa_playback.hpp  wav.hpp
ALSA/src/: alsa_capture.cpp  alsa_playback.cpp
net/: README.md  epoll_client.cpp  epoll_client.hpp
tools/CMake/: CMake搭建交叉编译环境.md  CMake构建项目示例.md
tools/CMake-TEST/: README.md  交叉编译ALSA.md
tools/CMake-TEST/sample/: CMakeLists.txt  build.sh  main.c
tools/CMake-TEST/sample/inc/: sample.h
tools/CMake-TEST/sample/src/: sample.c
tools/CMake-TEST/sample/toolchain/: arm-linux-gnueabihf.cmake
